Fixing some responsiveness issues

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="abstract-art"></div>
         <div class="container mx-auto text-center px-6 z-10">
             <img alt="Abdalrahman Essam Profile Picture" class="profile-picture mx-auto mb-8 fade-in" src="images/Abdalrahman essam.jpeg" style="animation-delay: 0.2s;" />
-            <h1 class="text-5xl md:text-7xl font-bold mb-4 slide-in-left" style="animation-delay: 0.5s;">
+            <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold mb-4 slide-in-left" style="animation-delay: 0.5s;">
                 <span class="text-white">Abdalrahman</span> <span class="text-stroke">Essam</span>
             </h1>
             <p class="text-xl md:text-2xl text-[#BDBDBD] mb-8 slide-in-right" style="animation-delay: 0.8s;">Third Year CCE Student | Full-Stack Developer</p>
@@ -53,31 +53,31 @@
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold text-center mb-16 text-[#A0C4FF]">Skills</h2>
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 md:gap-12">
-                <div class="skill-card text-center animate-scroll">
+                <div class="skill-card text-center animate-scroll aspect-square" >
                     <i class="fab fa-cuttlefish text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">C++</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.1s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.1s;">
                     <i class="fab fa-html5 text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">HTML</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.2s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.2s;">
                     <i class="fab fa-css3-alt text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">CSS</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.3s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.3s;">
                     <i class="fab fa-js-square text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">JavaScript</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.4s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.4s;">
                     <i class="fas fa-database text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">SQL</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.5s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.5s;">
                     <i class="fab fa-react text-6xl text-[#A0C4FF] mb-4"></i>
                     <h3 class="text-xl font-semibold">React</h3>
                 </div>
-                <div class="skill-card text-center animate-scroll" style="transition-delay: 0.6s;">
+                <div class="skill-card text-center animate-scroll aspect-square" style="transition-delay: 0.6s;">
                     <svg class="w-16 h-16 mx-auto mb-4 text-[#A0C4FF]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 6.25278C12 6.25278 5.65481 4.41667 3.5 9.33333C1.34519 14.25 7.55834 18.5833 12 20.5C16.4417 18.5833 22.6548 14.25 20.5 9.33333C18.3452 4.41667 12 6.25278 12 6.25278Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                         <path d="M15.926 10.333C15.2963 9.69041 14.4799 9.24969 13.5966 9.07035C12.7133 8.89102 11.7992 8.98296 10.9707 9.33301C10.1422 9.68305 9.44534 10.2728 8.97514 11.023C8.50495 11.7732 8.28456 12.6466 8.34539 13.521C8.40623 14.3954 8.74493 15.2248 9.31097 15.873C9.87701 16.5212 10.6379 16.9537 11.4874 17.11C12.337 17.2664 13.2231 17.1372 14.0072 16.7441C14.7913 16.351 15.4392 15.7142 15.861 14.924" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
