--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
 
-                <div class="project-card animate-scroll" style="transition-delay: 0.1s;">
+                <div class="project-card animate-scroll" >
                     <img alt="Telecommunication Company Database Application Screenshot" class="w-full h-64 object-cover project-image" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBe1fPsAAylJyDeibRSgTJOI8P2RPVdlmtZNg4N2Q7LUKatdJz-MxZbxfhZFzTc-hfbHgNX0e6R5lxfAvgDv5LTnsscs2w6-CwpZCrLpG3WsrIx1lTO7FC9A7nl1Lwaz-O_eOnsp5JGucirbMLWbAULb7NgxxTEt-hX0mHDHZKX-lva_1SvDN-zhqJ6Q-NoOy-vUWGV8k7A-dIb3ffa5d9HVqfilmLsJoLH3pKeqW9lYFToQG4JZeVe3ZImL7r0EqAgGhFUcnehXLU" />
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold mb-3 text-[#E0E1DD]">Telecommunication Company Database Application</h3>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
 
-                    <div class="project-card animate-scroll" style="transition-delay: 0.2s;">
+                    <div class="project-card animate-scroll">
                     <img alt="Collaborative Real-Time Text Editor Screenshot" class="w-full h-64 object-cover project-image" src="https://placehold.co/600x400/1B263B/E0E1DD?text=Text+Editor"/>
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold mb-3 text-[#E0E1DD]">Collaborative Real-Time Text Editor</h3>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card animate-scroll" style="transition-delay: 0.3s;">
+                <div class="project-card animate-scroll">
                     <img alt="Operating System Scheduler Screenshot" class="w-full h-64 object-cover project-image" src="https://placehold.co/600x400/1B263B/E0E1DD?text=OS+Scheduler"/>
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold mb-3 text-[#E0E1DD]">Operating System Scheduler</h3>
